- Removed margin that was making default horizontal scroll, horizontal scroll still appears when window is resized. - Added todo for links to new sites to open in another tab - added todo for fixing horizontal scroll, horizontal scroll should never happen

--- a/WebApplication2/Content/Site.css
+++ b/WebApplication2/Content/Site.css
@@ -1,11 +1,5 @@
 ﻿body {
-    /*padding-top: 7vh;*/
-    /*padding-bottom: 1%;*/
-    /*height: 98%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    flex:1;*/
+    margin-bottom : 0;
 }
 
 /* Set padding to keep content from hitting the edges */
